2001-12-22  Roland McGrath  <roland@frob.com>

	* connq.c (connq_compress): #if 0 out unused function.

	* sock.h (sock_deref): Don't define this extern inline.
	Instead, use static inline and __attribute__ ((unused)).
	* mig-decls.h (begin_using_sock_user_port): Likewise.
	(end_using_sock_user_port): Likewise.
	(begin_using_addr_port): Likewise.
	(end_using_addr_port): Likewise.

2001-03-31  Roland McGrath  <roland@frob.com>

	* sock.c: Include "connq.h" for connq_destroy decl.

2001-02-20  Marcus Brinkmann  <marcus@gnu.org>

	* connq.c: Include <assert.h>. Reported by Arkadi E. Shishlov
	<arkadi@it.lv>.

2001-02-11  Marcus Brinkmann  <marcus@gnu.org>

	* connq.c (connq_destroy): New function.
	* connq.h: Prototype connq_destroy.
	* sock.c (sock_free): Call connq_destroy when listen or connect
	queue exist.

2000-08-09  Mark Kettenis  <kettenis@gnu.org>

	* pf.c (S_socket_create): Only accept S_IFCHR, S_IFSOCK and
	S_IFIFO as `magic' protocols.

2000-08-02  Mark Kettenis  <kettenis@gnu.org>

	Add `magic' protocols to specify the file type of a sockets.  This
	allows implementation of POSIX pipes by using a S_IFSOCK protocol.
	* sock.h: Include <sys/types.h>.
	(struct sock): Add new member `mode'.
	(sock_create): Add new parameter `mode'.
	* sock.c (sock_create): Initialize `mode' member of struct sock,
	with new parameter.
	* pf.c (S_socket_create): Pass file type/mode to sock_create based
	on PROTOCOL.
	* io.c (S_io_stat): Use new member of `struct sock' to set
	ST->st_mode.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

1999-09-13  Roland McGrath  <roland@baalperazim.frob.com>

	* io.c: Reverted changes related to io_map_segment.

1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>

	* io.c (S_io_map_segment): New function.
